# xinyu

./: .flake8  .gitignore  .pre-commit-config.yaml  .xinyu-formatter.yaml  CHANGELOG.md  CI_CD_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_ANALYSIS_REPORT.md  build.py  debug_exception.py  debug_if_statement.py  debug_import.py  debug_keywords.py  debug_lexer.py  debug_parser.py  demo_formatter.py  example.xinyu  fix_f401_errors.py  fix_f841_errors.py  fix_first_test.py  fix_remaining_tests.py  migrate_error_handling.py  mypy.ini  performance_profile.json  performance_profile.txt  pyproject.toml  quality_check.py  requirements-dev.txt  requirements.txt  security_policy.yaml  test.json  test_all_stdlib_modules.py  test_benchmark_framework.py  test_builtin.py  test_builtin_implementation.py  test_bytecode_compiler.py  test_compiler_final.py  (+31 more)
.arts/: settings.json
.github/: dependabot.yml  deploy-config.yaml
actions/: 000000000001_chat_action.yml  000000000002_chat_action.yml  000000000003_chat_action.yml  000000000004_chat_action.yml  000000000005_chat_action.yml  000000000006_chat_action.yml  000000000007_chat_action.yml  000000000008_chat_action.yml  000000000009_chat_action.yml  000000000010_chat_action.yml  000_example.yml  101_current_work.yml
benchmark/: comprehensive_performance_test.py  final_performance_test.py  optimization_comparison.py  performance_analyzer.py  simple_performance_test.py
benchmark_reports/: benchmark_report_20260615_115954.html  benchmark_report_20260615_115954.json  benchmark_report_20260615_115954.txt  benchmark_report_20260615_221354.html  benchmark_report_20260615_221354.json  benchmark_report_20260615_221354.txt  benchmark_report_20260615_221746.html  benchmark_report_20260615_221746.json  benchmark_report_20260615_221746.txt  benchmark_report_20260615_221901.html  benchmark_report_20260615_221901.json  benchmark_report_20260615_221901.txt
config/: builtin_config.py
docs/: API_REFERENCE.md  ARITY_DRIVEN_PARSING_IMPLEMENTATION_PLAN.md  ARITY_DRIVEN_PARSING_SOLUTION.md  ARITY_FINAL_REPORT.md  ARITY_IMPLEMENTATION_FINAL.md  ARITY_IMPLEMENTATION_PROGRESS.md  ARITY_PROJECT_COMPLETE.md  ARITY_PROJECT_FINAL.md  ARITY_STAGE2_COMPLETED.md  ARITY_STAGE2_FINAL.md  ARITY_STAGE2_PROGRESS.md  BOOTSTRAP_FEASIBILITY_ASSESSMENT.md  BOOTSTRAP_IMPLEMENTATION_REPORT.md  (+68 more)
(+404 files in other folders)
