[project]
name = "xinyu-lang"
version = "0.1.0"
description = "心语编程语言 - 中文编程语言"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "心语开发团队", email = "team@xinyu-lang.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/xinyu-lang"
Documentation = "https://xinyu-lang.readthedocs.io/"
Repository = "https://github.com/yourusername/xinyu-lang"
Issues = "https://github.com/yourusername/xinyu-lang/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\\.pyi?'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", ".git", ".pytest_cache", ".mypy_cache"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    '\\.venv',
    'venv',
    '\\.git',
    '\\.pytest_cache',
    '\\.mypy_cache',
    'build',
    'dist',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

extend-exclude = '''/(
  # 排除的目录
  \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
  | eggs
  | \.tox
  | \.pytest_cache
  | \.mypy_cache
)/'''